# loghell

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  color.go  deny.toml  docker-compose.yml  go.mod  go.sum  go.work  go.work.sum  main.go  parser.go  rule.go  rule_test.go  storage.go  tcp.go  utils.go  ws.go
contrib/: config.yaml.example
dashboard/: README.md  index.css  index.html  main.go  package.json
dashboard/public/: index.html
dashboard/src/: App.js  index.css  index.js  serviceWorker.js
dashboard/src/components/: Button.js  Input.js  LogsOutput.js  RuleButton.js  RuleInput.js  index.js
dashboard/static/: index.js
dashboard/static/css/: index.css
dashboard/static/js/: index.js
example/: README.md  main.go
go/example/: README.md  go.mod  main.go
go/writer/: go.mod  zerolog.go
loghellctl/: Cargo.toml  README.md
loghellctl/src/: main.rs
prototype-go/: prototype.go
prototype-rs/: Cargo.toml
prototype-rs/src/: main.rs
src/: cluster.rs  config.rs  dashboard.go  http.go  http_test.go  log_storage.rs  main.go  main.rs  rule.go  rule_test.go  server.rs  shared.rs  storage_type.rs  tcp.go  utils.go  ws.go
src/config/: mod.rs
src/daemon/: daemon.rs  dashboard.rs  handler.rs  http.rs  mod.rs  server.rs  tcp.rs
src/index/: _tantivy.rs  error.rs  index_type.rs  mod.rs  nonsense.rs  tantivy.rs
src/server/: mod.rs
src/shared/: mod.rs
src/storage/: dummy.rs  error.rs  file.rs  in_memory.rs  mod.rs  nonsense.rs  storage_type.rs  tantivy.rs
writer/: zerolog.go
writers/go/: go.mod  go.sum  zerolog.go
writers/go/example/: README.md  main.go
