[package]
name = "loghell"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23", features = ["net", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"], default-features = false }
tracing = { version = "0.1.37", features = [], default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter", "ansi"], default-features = false }
fastrand = { version = "1.8.0", default-features = false }
sled = { version = "0.34.7", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
zerocopy = { version = "0.6.1", default-features = false }
serde = { version = "1.0.149", default-features = false }
serde_json = { version = "1.0.89", default-features = false }
tantivy = { version = "0.18.1", default-features = false }

[features]
default = ["nonsense_find_v1"]
nonsense_find_v1 = []
nonsense_find_v2 = []
