[package]
name = "loghell"
version = "2.0.0"
edition = "2021"
default-run = "loghell"

[dependencies]
tokio = { version = "1.28.1", features = ["io-util", "macros", "rt-multi-thread", "signal"], default-features = false }
tracing = { version = "0.1.37", features = [], default-features = false }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter", "ansi"], default-features = false }
serde = { version = "1.0.163", features = ["std", "derive"], default-features = false }
serde_json = { version = "1.0.96", features = ["std"], default-features = false }
thiserror = { version = "1.0.40", features = [], default-features = false }
fastrand = { version = "1.9.0", features = [], default-features = false }

[features]
default = ["index_nonsense", "index_tantivy", "storage_in_memory", "storage_file"]
index_nonsense = []
index_tantivy = []
storage_in_memory = []
storage_file = []

[workspace]
members = [".", "loghellctl"]
default-members = [".", "loghellctl"]
