[package]
name = "loghellctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["std", "color", "help", "usage", "derive", "error-context", "suggestions"], default-features = false }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"], default-features = false }
hyper = { version = "0.14.26", features = ["http1", "client", "runtime"], default-features = false }
